// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`US-012 · Abandonment details — snapshot stability > rendered homepage snapshot with abandonment details 1`] = `"<section class="module-news-block"><h2>Neuigkeiten</h2><ul class="news-list"><li class="news-item"><time>2013-01-16</time><h3>Version 3.0 Released with Major Performance Improvements</h3><p>Rate this update and leave a comment — we read every one.</p></li><li class="news-item"><time>2014-11-25</time><h3>Widget Gallery Now Open — Share Your Creations</h3><p>A big thank you to our beta testers who helped us catch several issues before launch.</p></li><li class="news-item"><time>2012-05-23</time><h3>Guestbook Entries Cleared — Spam Was Out of Control</h3><p>This update addresses issues reported by the community over the past few weeks.</p></li><li class="news-item"><time>2014-11-10</time><h3>Ajax-Powered Dashboard Rolls Out Today</h3><p>We know this has been a long-requested feature, and we are glad to deliver it at last.</p></li></ul></section><section class="module-features-grid"><h2>Funktionen</h2><div class="features-grid"><div class="feature-card"><div class="feature-icon">◆</div><h3>Custom Themes</h3><p>Integrate with your favorite tools and services.</p></div><div class="feature-card"><div class="feature-icon">◆</div><h3>Two-Factor Auth</h3><p>Roll back to any previous version at any time.</p></div><div class="feature-card"><div class="feature-icon">◆</div><h3>Offline Mode</h3><p>Migrate your existing data with ease.</p></div><div class="feature-card"><div class="feature-icon">◆</div><h3>Webhook Integration</h3><p>Track every change and who made it.</p></div><div class="feature-card"><div class="feature-icon">◆</div><h3>Encrypted Storage</h3><p>Build pages, forms, and dashboards visually without writing a single line of code.</p></div></div></section><div class="abandonment-counter"><span class="counter-value">9480 members registered</span></div><div class="abandonment-browser-notice">Please enable JavaScript and Adobe Flash to view this page</div><div class="abandonment-badge">Last updated: 04/04/2011</div><div class="abandonment-badge">Copyright 2012 — All rights reserved</div><div class="abandonment-badge">W3C XHTML 1.0 Compliant</div>"`;

exports[`US-012 · Abandonment details — snapshot stability > snapshot: budget-airline with region "de-de" 1`] = `
[
  {
    "cssClass": "abandonment-partner-logos",
    "id": "defunct-partner-logo",
    "label": "Partner: Altavista",
  },
  {
    "cssClass": "abandonment-badge",
    "id": "broken-badge",
    "label": "Hosted on Geocities",
  },
  {
    "cssClass": "abandonment-counter",
    "id": "dead-counter",
    "label": "Visitors: 47755",
  },
  {
    "cssClass": "abandonment-missing-asset",
    "id": "missing-asset-placeholder",
    "label": "[Logo failed to load]",
  },
  {
    "cssClass": "abandonment-browser-notice",
    "id": "deprecated-browser-notice",
    "label": "Best viewed in Internet Explorer 5.0 at 800x600",
  },
]
`;

exports[`US-012 · Abandonment details — snapshot stability > snapshot: budget-airline with seed "snap-alpha" 1`] = `
[
  {
    "cssClass": "abandonment-badge",
    "id": "broken-badge",
    "label": "Hosted on Geocities",
  },
  {
    "cssClass": "abandonment-badge",
    "id": "outdated-copyright",
    "label": "Copyright 1999 — All rights reserved",
  },
  {
    "cssClass": "abandonment-badge",
    "id": "stale-news-date",
    "label": "Last updated: 11/05/1996",
  },
  {
    "cssClass": "abandonment-browser-notice",
    "id": "deprecated-browser-notice",
    "label": "This page requires Shockwave Flash",
  },
  {
    "cssClass": "abandonment-badge",
    "id": "broken-badge",
    "label": "Made with Macromedia Dreamweaver",
  },
]
`;

exports[`US-012 · Abandonment details — snapshot stability > snapshot: budget-airline with seed "snap-beta" 1`] = `
[
  {
    "cssClass": "abandonment-badge",
    "id": "stale-news-date",
    "label": "Last updated: 08/06/1998",
  },
  {
    "cssClass": "abandonment-browser-notice",
    "id": "deprecated-browser-notice",
    "label": "This page requires Shockwave Flash",
  },
  {
    "cssClass": "abandonment-badge",
    "id": "broken-badge",
    "label": "Valid HTML 4.01 Transitional",
  },
]
`;

exports[`US-012 · Abandonment details — snapshot stability > snapshot: budget-airline with seed "snap-gamma" 1`] = `
[
  {
    "cssClass": "abandonment-badge",
    "id": "broken-badge",
    "label": "Valid HTML 4.01 Transitional",
  },
  {
    "cssClass": "abandonment-badge",
    "id": "outdated-copyright",
    "label": "Copyright 1999 — All rights reserved",
  },
  {
    "cssClass": "abandonment-counter",
    "id": "dead-counter",
    "label": "You are visitor #43497",
  },
  {
    "cssClass": "abandonment-partner-logos",
    "id": "defunct-partner-logo",
    "label": "Powered by Sun Microsystems",
  },
  {
    "cssClass": "abandonment-missing-asset",
    "id": "missing-asset-placeholder",
    "label": "[Logo failed to load]",
  },
]
`;

exports[`US-012 · Abandonment details — snapshot stability > snapshot: e-commerce-shop with seed "snap-alpha" 1`] = `
[
  {
    "cssClass": "abandonment-badge",
    "id": "broken-badge",
    "label": "Hosted on Geocities",
  },
  {
    "cssClass": "abandonment-badge",
    "id": "outdated-copyright",
    "label": "Copyright 1999 — All rights reserved",
  },
  {
    "cssClass": "abandonment-badge",
    "id": "stale-news-date",
    "label": "Last updated: 11/05/1996",
  },
  {
    "cssClass": "abandonment-browser-notice",
    "id": "deprecated-browser-notice",
    "label": "This page requires Shockwave Flash",
  },
  {
    "cssClass": "abandonment-badge",
    "id": "broken-badge",
    "label": "Made with Macromedia Dreamweaver",
  },
]
`;

exports[`US-012 · Abandonment details — snapshot stability > snapshot: e-commerce-shop with seed "snap-beta" 1`] = `
[
  {
    "cssClass": "abandonment-badge",
    "id": "stale-news-date",
    "label": "Last updated: 08/06/1998",
  },
  {
    "cssClass": "abandonment-browser-notice",
    "id": "deprecated-browser-notice",
    "label": "This page requires Shockwave Flash",
  },
  {
    "cssClass": "abandonment-badge",
    "id": "broken-badge",
    "label": "Valid HTML 4.01 Transitional",
  },
]
`;

exports[`US-012 · Abandonment details — snapshot stability > snapshot: e-commerce-shop with seed "snap-gamma" 1`] = `
[
  {
    "cssClass": "abandonment-badge",
    "id": "broken-badge",
    "label": "Valid HTML 4.01 Transitional",
  },
  {
    "cssClass": "abandonment-badge",
    "id": "outdated-copyright",
    "label": "Copyright 1999 — All rights reserved",
  },
  {
    "cssClass": "abandonment-counter",
    "id": "dead-counter",
    "label": "You are visitor #43497",
  },
  {
    "cssClass": "abandonment-partner-logos",
    "id": "defunct-partner-logo",
    "label": "Powered by Sun Microsystems",
  },
  {
    "cssClass": "abandonment-missing-asset",
    "id": "missing-asset-placeholder",
    "label": "[Logo failed to load]",
  },
]
`;

exports[`US-012 · Abandonment details — snapshot stability > snapshot: era "alt-timeline" with seed "snap-era-test" 1`] = `
[
  {
    "cssClass": "abandonment-missing-asset",
    "id": "missing-asset-placeholder",
    "label": "[Logo failed to load]",
  },
  {
    "cssClass": "abandonment-badge",
    "id": "broken-badge",
    "label": "Rendered via subether relay v0.4",
  },
]
`;

exports[`US-012 · Abandonment details — snapshot stability > snapshot: era "early-web" with seed "snap-era-test" 1`] = `
[
  {
    "cssClass": "abandonment-missing-asset",
    "id": "missing-asset-placeholder",
    "label": "[Banner image unavailable]",
  },
  {
    "cssClass": "abandonment-badge",
    "id": "stale-news-date",
    "label": "Last updated: 09/24/1999",
  },
]
`;

exports[`US-012 · Abandonment details — snapshot stability > snapshot: era "portal-era" with seed "snap-era-test" 1`] = `
[
  {
    "cssClass": "abandonment-missing-asset",
    "id": "missing-asset-placeholder",
    "label": "[Logo failed to load]",
  },
  {
    "cssClass": "abandonment-badge",
    "id": "broken-badge",
    "label": "Made with Macromedia Dreamweaver",
  },
]
`;

exports[`US-012 · Abandonment details — snapshot stability > snapshot: era "startup-minimalism" with seed "snap-era-test" 1`] = `
[
  {
    "cssClass": "abandonment-browser-notice",
    "id": "expired-ssl-notice",
    "label": "Security certificate expired on 09/04/2017",
  },
  {
    "cssClass": "abandonment-browser-notice",
    "id": "expired-ssl-notice",
    "label": "Warning: This connection is not secure",
  },
]
`;

exports[`US-012 · Abandonment details — snapshot stability > snapshot: era "web2" with seed "snap-era-test" 1`] = `
[
  {
    "cssClass": "abandonment-missing-asset",
    "id": "missing-asset-placeholder",
    "label": "[Logo failed to load]",
  },
  {
    "cssClass": "abandonment-badge",
    "id": "broken-badge",
    "label": "RSS Feed (0 subscribers)",
  },
]
`;

exports[`US-012 · Abandonment details — snapshot stability > snapshot: forum-community with seed "snap-alpha" 1`] = `
[
  {
    "cssClass": "abandonment-badge",
    "id": "broken-badge",
    "label": "Hosted on Geocities",
  },
  {
    "cssClass": "abandonment-badge",
    "id": "outdated-copyright",
    "label": "Copyright 1999 — All rights reserved",
  },
  {
    "cssClass": "abandonment-badge",
    "id": "stale-news-date",
    "label": "Last updated: 11/05/1996",
  },
  {
    "cssClass": "abandonment-browser-notice",
    "id": "deprecated-browser-notice",
    "label": "This page requires Shockwave Flash",
  },
  {
    "cssClass": "abandonment-badge",
    "id": "broken-badge",
    "label": "Made with Macromedia Dreamweaver",
  },
]
`;

exports[`US-012 · Abandonment details — snapshot stability > snapshot: forum-community with seed "snap-beta" 1`] = `
[
  {
    "cssClass": "abandonment-badge",
    "id": "stale-news-date",
    "label": "Last updated: 08/06/1998",
  },
  {
    "cssClass": "abandonment-browser-notice",
    "id": "deprecated-browser-notice",
    "label": "This page requires Shockwave Flash",
  },
  {
    "cssClass": "abandonment-badge",
    "id": "broken-badge",
    "label": "Valid HTML 4.01 Transitional",
  },
]
`;

exports[`US-012 · Abandonment details — snapshot stability > snapshot: forum-community with seed "snap-gamma" 1`] = `
[
  {
    "cssClass": "abandonment-badge",
    "id": "broken-badge",
    "label": "Valid HTML 4.01 Transitional",
  },
  {
    "cssClass": "abandonment-badge",
    "id": "outdated-copyright",
    "label": "Copyright 1999 — All rights reserved",
  },
  {
    "cssClass": "abandonment-counter",
    "id": "dead-counter",
    "label": "You are visitor #43497",
  },
  {
    "cssClass": "abandonment-partner-logos",
    "id": "defunct-partner-logo",
    "label": "Powered by Sun Microsystems",
  },
  {
    "cssClass": "abandonment-missing-asset",
    "id": "missing-asset-placeholder",
    "label": "[Logo failed to load]",
  },
]
`;

exports[`US-012 · Abandonment details — snapshot stability > snapshot: media-startup with region "de-de" 1`] = `
[
  {
    "cssClass": "abandonment-partner-logos",
    "id": "defunct-partner-logo",
    "label": "Partner: Altavista",
  },
  {
    "cssClass": "abandonment-badge",
    "id": "broken-badge",
    "label": "Hosted on Geocities",
  },
  {
    "cssClass": "abandonment-counter",
    "id": "dead-counter",
    "label": "Visitors: 47755",
  },
  {
    "cssClass": "abandonment-missing-asset",
    "id": "missing-asset-placeholder",
    "label": "[Logo failed to load]",
  },
  {
    "cssClass": "abandonment-browser-notice",
    "id": "deprecated-browser-notice",
    "label": "Best viewed in Internet Explorer 5.0 at 800x600",
  },
]
`;

exports[`US-012 · Abandonment details — snapshot stability > snapshot: media-startup with seed "snap-alpha" 1`] = `
[
  {
    "cssClass": "abandonment-badge",
    "id": "broken-badge",
    "label": "Hosted on Geocities",
  },
  {
    "cssClass": "abandonment-badge",
    "id": "outdated-copyright",
    "label": "Copyright 1999 — All rights reserved",
  },
  {
    "cssClass": "abandonment-badge",
    "id": "stale-news-date",
    "label": "Last updated: 11/05/1996",
  },
  {
    "cssClass": "abandonment-browser-notice",
    "id": "deprecated-browser-notice",
    "label": "This page requires Shockwave Flash",
  },
  {
    "cssClass": "abandonment-badge",
    "id": "broken-badge",
    "label": "Made with Macromedia Dreamweaver",
  },
]
`;

exports[`US-012 · Abandonment details — snapshot stability > snapshot: media-startup with seed "snap-beta" 1`] = `
[
  {
    "cssClass": "abandonment-badge",
    "id": "stale-news-date",
    "label": "Last updated: 08/06/1998",
  },
  {
    "cssClass": "abandonment-browser-notice",
    "id": "deprecated-browser-notice",
    "label": "This page requires Shockwave Flash",
  },
  {
    "cssClass": "abandonment-badge",
    "id": "broken-badge",
    "label": "Valid HTML 4.01 Transitional",
  },
]
`;

exports[`US-012 · Abandonment details — snapshot stability > snapshot: media-startup with seed "snap-gamma" 1`] = `
[
  {
    "cssClass": "abandonment-badge",
    "id": "broken-badge",
    "label": "Valid HTML 4.01 Transitional",
  },
  {
    "cssClass": "abandonment-badge",
    "id": "outdated-copyright",
    "label": "Copyright 1999 — All rights reserved",
  },
  {
    "cssClass": "abandonment-counter",
    "id": "dead-counter",
    "label": "You are visitor #43497",
  },
  {
    "cssClass": "abandonment-partner-logos",
    "id": "defunct-partner-logo",
    "label": "Powered by Sun Microsystems",
  },
  {
    "cssClass": "abandonment-missing-asset",
    "id": "missing-asset-placeholder",
    "label": "[Logo failed to load]",
  },
]
`;

exports[`US-012 · Abandonment details — snapshot stability > snapshot: mmorpg-guild with region "de-de" 1`] = `
[
  {
    "cssClass": "abandonment-partner-logos",
    "id": "defunct-partner-logo",
    "label": "Partner: Altavista",
  },
  {
    "cssClass": "abandonment-badge",
    "id": "broken-badge",
    "label": "Hosted on Geocities",
  },
  {
    "cssClass": "abandonment-counter",
    "id": "dead-counter",
    "label": "Visitors: 47755",
  },
  {
    "cssClass": "abandonment-missing-asset",
    "id": "missing-asset-placeholder",
    "label": "[Logo failed to load]",
  },
  {
    "cssClass": "abandonment-browser-notice",
    "id": "deprecated-browser-notice",
    "label": "Best viewed in Internet Explorer 5.0 at 800x600",
  },
]
`;

exports[`US-012 · Abandonment details — snapshot stability > snapshot: mmorpg-guild with seed "snap-alpha" 1`] = `
[
  {
    "cssClass": "abandonment-badge",
    "id": "broken-badge",
    "label": "Hosted on Geocities",
  },
  {
    "cssClass": "abandonment-badge",
    "id": "outdated-copyright",
    "label": "Copyright 1999 — All rights reserved",
  },
  {
    "cssClass": "abandonment-badge",
    "id": "stale-news-date",
    "label": "Last updated: 11/05/1996",
  },
  {
    "cssClass": "abandonment-browser-notice",
    "id": "deprecated-browser-notice",
    "label": "This page requires Shockwave Flash",
  },
  {
    "cssClass": "abandonment-badge",
    "id": "broken-badge",
    "label": "Made with Macromedia Dreamweaver",
  },
]
`;

exports[`US-012 · Abandonment details — snapshot stability > snapshot: mmorpg-guild with seed "snap-beta" 1`] = `
[
  {
    "cssClass": "abandonment-badge",
    "id": "stale-news-date",
    "label": "Last updated: 08/06/1998",
  },
  {
    "cssClass": "abandonment-browser-notice",
    "id": "deprecated-browser-notice",
    "label": "This page requires Shockwave Flash",
  },
  {
    "cssClass": "abandonment-badge",
    "id": "broken-badge",
    "label": "Valid HTML 4.01 Transitional",
  },
]
`;

exports[`US-012 · Abandonment details — snapshot stability > snapshot: mmorpg-guild with seed "snap-gamma" 1`] = `
[
  {
    "cssClass": "abandonment-badge",
    "id": "broken-badge",
    "label": "Valid HTML 4.01 Transitional",
  },
  {
    "cssClass": "abandonment-badge",
    "id": "outdated-copyright",
    "label": "Copyright 1999 — All rights reserved",
  },
  {
    "cssClass": "abandonment-counter",
    "id": "dead-counter",
    "label": "You are visitor #43497",
  },
  {
    "cssClass": "abandonment-partner-logos",
    "id": "defunct-partner-logo",
    "label": "Powered by Sun Microsystems",
  },
  {
    "cssClass": "abandonment-missing-asset",
    "id": "missing-asset-placeholder",
    "label": "[Logo failed to load]",
  },
]
`;

exports[`US-012 · Abandonment details — snapshot stability > snapshot: os-vendor with region "de-de" 1`] = `
[
  {
    "cssClass": "abandonment-partner-logos",
    "id": "defunct-partner-logo",
    "label": "Partner: Altavista",
  },
  {
    "cssClass": "abandonment-badge",
    "id": "broken-badge",
    "label": "Hosted on Geocities",
  },
  {
    "cssClass": "abandonment-counter",
    "id": "dead-counter",
    "label": "Visitors: 47755",
  },
  {
    "cssClass": "abandonment-missing-asset",
    "id": "missing-asset-placeholder",
    "label": "[Logo failed to load]",
  },
  {
    "cssClass": "abandonment-browser-notice",
    "id": "deprecated-browser-notice",
    "label": "Best viewed in Internet Explorer 5.0 at 800x600",
  },
]
`;

exports[`US-012 · Abandonment details — snapshot stability > snapshot: os-vendor with seed "snap-alpha" 1`] = `
[
  {
    "cssClass": "abandonment-badge",
    "id": "broken-badge",
    "label": "Hosted on Geocities",
  },
  {
    "cssClass": "abandonment-badge",
    "id": "outdated-copyright",
    "label": "Copyright 1999 — All rights reserved",
  },
  {
    "cssClass": "abandonment-badge",
    "id": "stale-news-date",
    "label": "Last updated: 11/05/1996",
  },
  {
    "cssClass": "abandonment-browser-notice",
    "id": "deprecated-browser-notice",
    "label": "This page requires Shockwave Flash",
  },
  {
    "cssClass": "abandonment-badge",
    "id": "broken-badge",
    "label": "Made with Macromedia Dreamweaver",
  },
]
`;

exports[`US-012 · Abandonment details — snapshot stability > snapshot: os-vendor with seed "snap-beta" 1`] = `
[
  {
    "cssClass": "abandonment-badge",
    "id": "stale-news-date",
    "label": "Last updated: 08/06/1998",
  },
  {
    "cssClass": "abandonment-browser-notice",
    "id": "deprecated-browser-notice",
    "label": "This page requires Shockwave Flash",
  },
  {
    "cssClass": "abandonment-badge",
    "id": "broken-badge",
    "label": "Valid HTML 4.01 Transitional",
  },
]
`;

exports[`US-012 · Abandonment details — snapshot stability > snapshot: os-vendor with seed "snap-gamma" 1`] = `
[
  {
    "cssClass": "abandonment-badge",
    "id": "broken-badge",
    "label": "Valid HTML 4.01 Transitional",
  },
  {
    "cssClass": "abandonment-badge",
    "id": "outdated-copyright",
    "label": "Copyright 1999 — All rights reserved",
  },
  {
    "cssClass": "abandonment-counter",
    "id": "dead-counter",
    "label": "You are visitor #43497",
  },
  {
    "cssClass": "abandonment-partner-logos",
    "id": "defunct-partner-logo",
    "label": "Powered by Sun Microsystems",
  },
  {
    "cssClass": "abandonment-missing-asset",
    "id": "missing-asset-placeholder",
    "label": "[Logo failed to load]",
  },
]
`;

exports[`US-012 · Abandonment details — snapshot stability > snapshot: personal-homepage with seed "snap-alpha" 1`] = `
[
  {
    "cssClass": "abandonment-badge",
    "id": "broken-badge",
    "label": "Hosted on Geocities",
  },
  {
    "cssClass": "abandonment-badge",
    "id": "outdated-copyright",
    "label": "Copyright 1999 — All rights reserved",
  },
  {
    "cssClass": "abandonment-badge",
    "id": "stale-news-date",
    "label": "Last updated: 11/05/1996",
  },
  {
    "cssClass": "abandonment-browser-notice",
    "id": "deprecated-browser-notice",
    "label": "This page requires Shockwave Flash",
  },
  {
    "cssClass": "abandonment-badge",
    "id": "broken-badge",
    "label": "Made with Macromedia Dreamweaver",
  },
]
`;

exports[`US-012 · Abandonment details — snapshot stability > snapshot: personal-homepage with seed "snap-beta" 1`] = `
[
  {
    "cssClass": "abandonment-badge",
    "id": "stale-news-date",
    "label": "Last updated: 08/06/1998",
  },
  {
    "cssClass": "abandonment-browser-notice",
    "id": "deprecated-browser-notice",
    "label": "This page requires Shockwave Flash",
  },
  {
    "cssClass": "abandonment-badge",
    "id": "broken-badge",
    "label": "Valid HTML 4.01 Transitional",
  },
]
`;

exports[`US-012 · Abandonment details — snapshot stability > snapshot: personal-homepage with seed "snap-gamma" 1`] = `
[
  {
    "cssClass": "abandonment-badge",
    "id": "broken-badge",
    "label": "Valid HTML 4.01 Transitional",
  },
  {
    "cssClass": "abandonment-badge",
    "id": "outdated-copyright",
    "label": "Copyright 1999 — All rights reserved",
  },
  {
    "cssClass": "abandonment-counter",
    "id": "dead-counter",
    "label": "You are visitor #43497",
  },
  {
    "cssClass": "abandonment-partner-logos",
    "id": "defunct-partner-logo",
    "label": "Powered by Sun Microsystems",
  },
  {
    "cssClass": "abandonment-missing-asset",
    "id": "missing-asset-placeholder",
    "label": "[Logo failed to load]",
  },
]
`;

exports[`US-012 · Abandonment details — snapshot stability > snapshot: webmail-provider with seed "snap-alpha" 1`] = `
[
  {
    "cssClass": "abandonment-badge",
    "id": "broken-badge",
    "label": "Hosted on Geocities",
  },
  {
    "cssClass": "abandonment-badge",
    "id": "outdated-copyright",
    "label": "Copyright 1999 — All rights reserved",
  },
  {
    "cssClass": "abandonment-badge",
    "id": "stale-news-date",
    "label": "Last updated: 11/05/1996",
  },
  {
    "cssClass": "abandonment-browser-notice",
    "id": "deprecated-browser-notice",
    "label": "This page requires Shockwave Flash",
  },
  {
    "cssClass": "abandonment-badge",
    "id": "broken-badge",
    "label": "Made with Macromedia Dreamweaver",
  },
]
`;

exports[`US-012 · Abandonment details — snapshot stability > snapshot: webmail-provider with seed "snap-beta" 1`] = `
[
  {
    "cssClass": "abandonment-badge",
    "id": "stale-news-date",
    "label": "Last updated: 08/06/1998",
  },
  {
    "cssClass": "abandonment-browser-notice",
    "id": "deprecated-browser-notice",
    "label": "This page requires Shockwave Flash",
  },
  {
    "cssClass": "abandonment-badge",
    "id": "broken-badge",
    "label": "Valid HTML 4.01 Transitional",
  },
]
`;

exports[`US-012 · Abandonment details — snapshot stability > snapshot: webmail-provider with seed "snap-gamma" 1`] = `
[
  {
    "cssClass": "abandonment-badge",
    "id": "broken-badge",
    "label": "Valid HTML 4.01 Transitional",
  },
  {
    "cssClass": "abandonment-badge",
    "id": "outdated-copyright",
    "label": "Copyright 1999 — All rights reserved",
  },
  {
    "cssClass": "abandonment-counter",
    "id": "dead-counter",
    "label": "You are visitor #43497",
  },
  {
    "cssClass": "abandonment-partner-logos",
    "id": "defunct-partner-logo",
    "label": "Powered by Sun Microsystems",
  },
  {
    "cssClass": "abandonment-missing-asset",
    "id": "missing-asset-placeholder",
    "label": "[Logo failed to load]",
  },
]
`;
